@@ -5,6 +5,7 @@ Repository head::
      =J selection gets all commmits and tags with non-ASCII metadata
      Added msgin --relax option.
      On most subcommands repocutter -r restricts which commits are transformed.
+     Added pathlist command to repocutter.
 
 4.29: 2021-09-08::
      Added swapsvn subcommand to repocutter.
